commit after giving db to git

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Ignore Django stuff
 __pycache__/
 *.pyc
-*.sqlite3
+# *.sqlite3
 *.log
-db.sqlite3
+# db.sqlite3
 
 # Ignore environment/config files
 *.env
